Finished Main Activity

--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,21 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
+            <!-- Style 1 -->
+    <color name="light_blue">#C5CAE9</color>
+    <color name="blue">#3F51B5</color>
+    <color name="dark_blue">#303F9F</color>
+    <color name="accent_yellow">#FFC107</color>
+
+            <!-- Style 2 -->
+    <color name="light_orange">#FFCCBC</color>
+    <color name="orange">#FF5722</color>
+    <color name="dark_orange">#E64A19</color>
+    <color name="accent_blue">#536DFE</color>
+
+            <!-- Text Colors-->
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="divider">#B6B6B6</color>
+    <color name="text">#FFFFFF</color>
 </resources>
