--- a/XYZReader/src/main/res/layout/activity_list_coord.xml
+++ b/XYZReader/src/main/res/layout/activity_list_coord.xml
@@ -1,47 +1,45 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
-             xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
-
+        <!-- Extends past bottom of screen? -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/text"
             android:clipToPadding="false"
-            android:paddingTop="112dp"
             android:scrollbarStyle="outsideOverlay"
             tools:listitem="@layout/list_item_plain"
-            android:background="@color/text"
             />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <FrameLayout
-        android:id="@+id/toolbar_container"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="112dp"
+        android:layout_height="wrap_content"
         android:elevation="8dp"
-        android:background="?colorPrimary"
         >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:layout_gravity="bottom"
+            android:layout_height="112dp"
             android:layout_marginLeft="@dimen/list_toolbar_side_margin"
             android:layout_marginRight="@dimen/list_toolbar_side_margin"
-
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:background="?colorPrimary"
+            android:gravity="bottom"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
             >
 
             <ImageView
@@ -51,5 +49,5 @@
                 android:src="@drawable/logo"
                 />
         </android.support.v7.widget.Toolbar>
-    </FrameLayout>
-</FrameLayout>
+    </android.support.design.widget.AppBarLayout>
+</android.support.design.widget.CoordinatorLayout>
