--- a/XYZReader/src/main/res/values-v21/styles.xml
+++ b/XYZReader/src/main/res/values-v21/styles.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--<style name="Theme.Bacon" parent="android:Theme.Material">-->
-        <!--<item name="android:colorPrimary">@color/orange</item>-->
-        <!--<item name="android:colorPrimaryDark">@color/dark_orange</item>-->
-        <!--<item name="android:colorAccent">@color/accent_blue</item>-->
-    <!--</style>-->
+    <style name="Theme.Main" parent="Theme.Bacon">
 
-    <!--<style name="Theme.Bacon.Detail">-->
-        <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
-    <!--</style>-->
+        <item name="android:windowContentTransitions">true</item>
+
+        <!-- specify shared element transitions -->
+        <item name="android:fragmentSharedElementEnterTransition">@transition/image</item>
+        <item name="android:fragmentSharedElementReturnTransition">@transition/image</item>
+        <item name="android:fragmentEnterTransition">@transition/image</item>
+        <item name="android:windowExitTransition">@transition/image</item>
+    </style>
 
 </resources>
